<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountView">

    <TextView
        android:id="@+id/view_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/view_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:text="⬤⬤⬤⬤⬤⬤⬤⬤⬤⬤⬤⬤"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/view_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_username" />

    <TextView
        android:id="@+id/view_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/view_site"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_password" />

    <TextView
        android:id="@+id/view_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_site" />

    <TextView
        android:id="@+id/view_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/view_tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_email" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:alpha="@dimen/material_emphasis_disabled"
        android:text="@string/text_username"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_username"
        app:layout_constraintEnd_toStartOf="@+id/view_username"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_username" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:alpha="@dimen/material_emphasis_disabled"
        android:text="Password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_password"
        app:layout_constraintEnd_toStartOf="@+id/view_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_password" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:alpha="@dimen/material_emphasis_disabled"
        android:text="@string/text_email"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_email"
        app:layout_constraintEnd_toStartOf="@+id/view_email"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_email" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:alpha="@dimen/material_emphasis_disabled"
        android:text="@string/text_site"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_site"
        app:layout_constraintEnd_toStartOf="@+id/view_site"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_site" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:alpha="@dimen/material_emphasis_disabled"
        android:text="Tag"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_tag"
        app:layout_constraintEnd_toStartOf="@+id/view_tag"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_tag" />

</androidx.constraintlayout.widget.ConstraintLayout>